1_Kubernetes/secrets.yaml
apiVersion: v1
kind: Secret
metadata:
  name: my-secret
type: Opaque
data:
  username: YWRtaW4=  # base64-encoded value
  password: c2VjcmV0MTIz  # base64-encoded value


apiVersion: v1
kind: Secret
metadata:
  name: my-tls-secret
type: kubernetes.io/tls
data:
  tls.crt: |-
    -----BEGIN CERTIFICATE-----
    (base64-encoded certificate)
    -----END CERTIFICATE-----
  tls.key: |-
    -----BEGIN PRIVATE KEY-----
    (base64-encoded private key)
    -----END PRIVATE KEY-----

apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: my-container
    image: my-image
