1_Kubernetes/namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: afdasdfasf
spec:
  podSelector:
    matchLabels:
      app: my-app or environment:prod
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: database
      ports:
        - protocol: TCP
          port: 3306
    - from:
      - namespaceSelector:
          matchLabels:
            project: my-project
      ports:
        - protocol: TCP
          port: 8080
    - ipBlock:
      cidr: 172.17.0.0/16
      except:
      - 172.17.1.0/24
  egress:
    - to:
      - ipBlock:
          cidr: 10.0.0.0/24
      ports:
        - protocol: TCP
          port: 80
